// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RemarkUtils and LinkUtils > doesn't find block anchor within code block 1`] = `[]`;

exports[`RemarkUtils and LinkUtils > doesn't find block anchor within inline code 1`] = `[]`;

exports[`RemarkUtils and LinkUtils > findAnchors > doesn't find block anchor within wikilink 1`] = `[]`;

exports[`RemarkUtils and LinkUtils > findAnchors > one block anchor 1`] = `
[
  {
    "id": "block-anchor",
    "position": Position {
      "end": {
        "column": 53,
        "line": 2,
        "offset": 98,
      },
      "indent": [],
      "start": {
        "column": 40,
        "line": 2,
        "offset": 85,
      },
    },
    "type": "blockAnchor",
    "value": "^block-anchor",
  },
]
`;

exports[`RemarkUtils and LinkUtils > findAnchors > one header 1`] = `
[
  {
    "children": [
      {
        "position": Position {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "indent": [],
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "text",
        "value": "h1",
      },
    ],
    "depth": 1,
    "position": Position {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "indent": [],
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "heading",
  },
]
`;

exports[`RemarkUtils and LinkUtils > findLinksFromBody > empty link 1`] = `[]`;

exports[`RemarkUtils and LinkUtils > findLinksFromBody > filter > loc match 1`] = `
[
  {
    "alias": undefined,
    "from": {
      "fname": "foo",
      "id": "foo",
      "vaultName": "vault1",
    },
    "position": Position {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "indent": [],
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "sameFile": false,
    "to": {
      "anchorHeader": undefined,
      "fname": "foo",
      "vaultName": undefined,
    },
    "type": "wiki",
    "value": "foo",
    "xvault": false,
  },
]
`;

exports[`RemarkUtils and LinkUtils > findLinksFromBody > filter > loc no match 1`] = `[]`;

exports[`RemarkUtils and LinkUtils > findLinksFromBody > hashtag link 1`] = `
[
  {
    "alias": "#bar",
    "from": {
      "fname": "foo",
      "id": "foo",
      "vaultName": "vault1",
    },
    "position": Position {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "indent": [],
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "sameFile": undefined,
    "to": {
      "anchorHeader": undefined,
      "fname": "tags.bar",
      "vaultName": undefined,
    },
    "type": "wiki",
    "value": "tags.bar",
    "xvault": false,
  },
]
`;

exports[`RemarkUtils and LinkUtils > findLinksFromBody > note ref 1`] = `
[
  {
    "alias": undefined,
    "from": {
      "fname": "foo.one",
      "id": "foo.one-id",
      "vaultName": "vault1",
    },
    "position": Position {
      "end": {
        "column": 30,
        "line": 3,
        "offset": 52,
      },
      "indent": [],
      "start": {
        "column": 19,
        "line": 3,
        "offset": 41,
      },
    },
    "sameFile": false,
    "to": {
      "anchorHeader": undefined,
      "fname": "foo.two",
      "vaultName": undefined,
    },
    "type": "wiki",
    "value": "foo.two",
    "xvault": false,
  },
  {
    "from": {
      "fname": "foo.one",
      "id": "foo.one-id",
      "vaultName": "vault1",
    },
    "position": Position {
      "end": {
        "column": 13,
        "line": 2,
        "offset": 22,
      },
      "indent": [],
      "start": {
        "column": 1,
        "line": 2,
        "offset": 10,
      },
    },
    "to": {
      "anchorHeader": undefined,
      "fname": "foo.two",
      "vaultName": undefined,
    },
    "type": "ref",
    "value": "foo.two",
    "xvault": false,
  },
]
`;

exports[`RemarkUtils and LinkUtils > findLinksFromBody > one link 1`] = `
[
  {
    "alias": undefined,
    "from": {
      "fname": "foo",
      "id": "foo",
      "vaultName": "vault1",
    },
    "position": Position {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "indent": [],
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "sameFile": false,
    "to": {
      "anchorHeader": undefined,
      "fname": "bar",
      "vaultName": undefined,
    },
    "type": "wiki",
    "value": "bar",
    "xvault": false,
  },
]
`;

exports[`RemarkUtils and LinkUtils > findLinksFromBody > xvault link 1`] = `
[
  {
    "alias": undefined,
    "from": {
      "fname": "foo",
      "id": "foo",
      "vaultName": "vault1",
    },
    "position": Position {
      "end": {
        "column": 25,
        "line": 1,
        "offset": 24,
      },
      "indent": [],
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "sameFile": false,
    "to": {
      "anchorHeader": undefined,
      "fname": "bar",
      "vaultName": "vault2",
    },
    "type": "wiki",
    "value": "bar",
    "xvault": true,
  },
]
`;

exports[`RemarkUtils and LinkUtils > updateLink > basic 1`] = `
"# Foo.One
![[foo.two]]
Regular wikilink: [[foo.bar]]"
`;

exports[`RemarkUtils and LinkUtils > updateLink > multiple links present > link no space 1`] = `
"[[foo]]
nospace[[bar]]
onespace [[foo]]"
`;

exports[`RemarkUtils and LinkUtils > updateLink > multiple links present > link onespace 1`] = `
"[[foo]]
nospace[[foo]]
onespace [[bar]]"
`;

exports[`RemarkUtils and LinkUtils > updateLink > multiple links present > only link 1`] = `
"[[bar]]
nospace[[foo]]
onespace [[foo]]"
`;
